--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Tartib Laundry: modern laundry service with live order tracking, delivery requests, and staff dashboard."
     />
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Tartib Laundry" />
     <meta property="og:title" content="Tartib Laundry" />
     <meta
       property="og:description"
