--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
       content="Tartib Laundry: modern laundry service with live order tracking, delivery requests, and staff dashboard."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Tartib Laundry" />
-    <meta property="og:title" content="Tartib Laundry" />
+    <meta property="og:site_name" content="مغاسل ترتيب | Tartib Laundry" />
+    <meta property="og:title" content="مغاسل ترتيب | Tartib Laundry" />
     <meta
       property="og:description"
       content="Track your Tartib Laundry order instantly and request delivery in one tap."
     />
     <meta property="og:image" content="/social-preview.svg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Tartib Laundry" />
+    <meta name="twitter:title" content="مغاسل ترتيب | Tartib Laundry" />
     <meta
       name="twitter:description"
       content="Track your Tartib Laundry order instantly and request delivery in one tap."
